Fixed grid images overlapping

--- a/wwwroot/css/grid.css
+++ b/wwwroot/css/grid.css
@@ -31,7 +31,7 @@ h4 {
     padding: 0;
     -moz-column-gap: 0.5em;
     -webkit-column-gap: 0.5em;
-    column-gap: 1em;
+    column-gap: 3em;
     font-size: .85em;
 }
 
@@ -39,7 +39,7 @@ h4 {
     display: inline-block;
     background: #000000;
     padding: 0em;
-    margin: 0 0 1em;
+    margin: 0em 0em 3em;
     width: 100%;
     -webkit-transition: 1s ease all;
     box-sizing: border-box;
